@@ -3,6 +3,7 @@ lintian-brush (0.100) UNRELEASED; urgency=medium
   * Drop ognibuild to recommends; it's only used by debianize.
   * Read field lists from lintian.
   * Add support for fixing some things in debcargo.toml.
+  * Enable upstream signing key updating.
 
  -- Jelmer Vernooĳ <jelmer@debian.org>  Tue, 02 Mar 2021 14:59:45 +0000
 
